--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@
 <p> Primero me gustaria empezar añadiendo una imagen </p>
 <img src= "Niko.webp" alt="Saluden a niko"/>
 <h3> Quieren saber mas de niko? </h3>
-<a href="https://oneshot.fandom.com/wiki/Niko">Presiona aqui/a>
+<a href="https://oneshot.fandom.com/wiki/Niko">Presiona aqui
