--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1> El primero de muchos codigos </h1> 
 <h2> Bienvenidos </h2>
 <p> Primero me gustaria empezar añadiendo una imagen </p>
-<img src= "Niko.webp" alt="Saluden a niko"/>
+<img src= "Niko.webp" alt="Saluden a nikó"/>
 <h3> Quieren saber mas de niko? </h3>
 <a href="https://oneshot.fandom.com/wiki/Niko">Presiona aqui
