--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <h1> El primero de muchos codigos </h1> 
 <h2> Bienvenidos </h2>
-<p> Primero me gustaria empezar añadiendo una imagen </p>
-<img src= "Niko.webp" alt="Saluden a nikó"/>
+<p>Voy a añadir una imagen </p>
+<img src= 
+<a href="https://oneshot.fandom.com/wiki/Niko"> "Niko.webp" alt="Saluden a nikó"/> a/> 
 <h3> Quieren saber mas de niko? </h3>
-<a href="https://oneshot.fandom.com/wiki/Niko">Presiona aqui
+<p>Hablemos de Niko</p>
+<h3>A Niko le gustan:</h3>
+<ol> <li>Panqueques</li>
+<li>Estar con su mama</li>
+<li>Y <strong>Tu</strong></li></ol>
+<section>
+  <h2>Quieres saber la historia de <em>Niko</em>?</h2>
+  <img
