--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <h1> El primero de muchos codigos </h1> 
 <h2> Bienvenidos </h2>
 <p>Voy a añadir una imagen </p>
-<img src= 
-<a href="https://oneshot.fandom.com/wiki/Niko"> "Niko.webp" alt="Saluden a nikó"/> a/> 
+<img src= <a href="https://oneshot.fandom.com/wiki/Niko"> "Niko.webp" alt="Saluden a nikó"> a/> 
 <h3> Quieren saber mas de niko? </h3>
 <p>Hablemos de Niko</p>
 <h3>A Niko le gustan:</h3>
@@ -11,4 +10,4 @@
 <li>Y <strong>Tu</strong></li></ol>
 <section>
   <h2>Quieres saber la historia de <em>Niko</em>?</h2>
-  <img
+  <img src"=wp5314453.jpg" alt="Niko apreciando el paisaje">
