--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1> El primero de muchos codigos </h1> 
 <h2> Bienvenidos </h2>
 <p>Voy a añadir una imagen </p>
-<img src= "<a href="https://oneshot.fandom.com/wiki/Niko"> Niko.webp" alt="Saluden a nikó"/a>
+<img src= "Niko.webp" alt="Saluden a nikó">
 <h3> Quieren saber mas de niko? </h3>
 <p>Hablemos de Niko</p>
 <h3>A Niko le gustan:</h3>
