--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <h1> El primero de muchos codigos </h1> 
 <h2> Bienvenidos </h2>
 <p>Voy a añadir una imagen </p>
-<img src="Niko.webp" alt="Saluden a nikó">
+<a href="https://oneshot.fandom.com/wiki/Niko"
+<img src="Niko.webp" alt="Saluden a nikó"> a/>
 <h3> Quieren saber mas de niko? </h3>
 <p>Hablemos de Niko</p>
 <h3>A Niko le gustan:</h3>
@@ -10,4 +11,6 @@
 <li>Y <strong>Tu</strong></li></ol>
 <section>
   <h2>Quieres saber la historia de <em>Niko</em>?</h2>
-  <img src="wp5314453.jpg" alt="Niko apreciando el paisaje">
+  <a href="https://www.youtube.com/watch?v=r9KCo3pBE3I"
+  <img src="wp5314453.jpg" alt="Niko apreciando el paisaje">a/>
+</section>
