--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <h2> Bienvenidos </h2>
 <p>Voy a añadir una imagen </p>
 <a href="https://oneshot.fandom.com/wiki/Niko"
-<img src="Niko.webp" alt="Saluden a nikó">a/>
+ <img src="Niko.webp" alt="Saluden a nikó">
+ /a> 
 <h3> Quieren saber mas de niko? </h3>
 <p>Hablemos de Niko</p>
 <h3>A Niko le gustan:</h3>
@@ -12,5 +13,6 @@
 <section>
   <h2>Quieres saber la historia de <em>Niko</em>?</h2>
   <a href="https://www.youtube.com/watch?v=r9KCo3pBE3I"
-  <img src="wp5314453.jpg" alt="Niko apreciando el paisaje">a/>
+   <img src="wp5314453.jpg" alt="Niko apreciando el paisaje">
+  a/>
 </section>
