--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <h1> El primero de muchos codigos </h1> 
 <h2> Bienvenidos </h2>
 <p>Voy a añadir una imagen </p>
+<section>
 <a href="https://oneshot.fandom.com/wiki/Niko"
  <img src="Niko.webp" alt="Saluden a nikó">
- /a> 
+</a>
+</section>
 <h3> Quieren saber mas de niko? </h3>
 <p>Hablemos de Niko</p>
 <h3>A Niko le gustan:</h3>
