--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
 <h3> Quieren saber mas de niko? </h3>
 <p>Hablemos de Niko</p>
 <h3>A Niko le gustan:</h3>
-<ol> <li>Panqueques</li>
-<li>Estar con su mama</li>
-<li>Y <strong>Tu</strong></li></ol>
+<ol> 
+ <li>Panqueques</li>
+ <li>Estar con su mama</li>
+ <li>Y <strong>Tu</strong></li></ol>
+<h3>Niko <strong>Odia</strong>:</h3>
+  <ol>
+   <li>El agua</li>
+   <li>Que lastimen a sus amigos</li>
+   <li>Que lo confundan con un gato</li>
+   <li>Que estes triste</li>  
+  </ol>
+  <img
 <section>
   <h2>Quieres saber la historia de <em>Niko</em>?</h2>
   <a href="https://www.youtube.com/watch?v=r9KCo3pBE3I">
-   <img src="wp5314453.jpg" alt="Niko apreciando el paisaje"><a/> Toca la imagen para verla
+   <img src="wp5314453.jpg" alt="Niko apreciando el paisaje"><a/> Toca la imagen para ver su historia 
 </section>
