--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <li>Que lo confundan con un gato</li>
    <li>Que estes triste</li>  
   </ol>
-  <img
+  <img src="i-tried-to-manually-upscale-nikos-face-sprite-v0-r2qg2xt9nzge1.webp" alt="Niko con cara triste">
 <section>
   <h2>Quieres saber la historia de <em>Niko</em>?</h2>
   <a href="https://www.youtube.com/watch?v=r9KCo3pBE3I">
