--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-
+<DOCTYPE html>
+ <html lang="esp">
+  <head>Title="Mi Amigo NIko"</head>
+  <meta charset="utf-8">
 <h1> El primero de muchos codigos </h1> 
 <h2> Bienvenidos </h2>
 <p>Voy a añadir una imagen </p>
