--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <DOCTYPE html>
  <html lang="esp">
-  <head>Title="Mi Amigo NIko"</head>
-  <meta charset="utf-8">
+  <head>
+   <meta charset="utf-8">
+   <title>Mi Amigo Niko</title>
+  </head>
 <h1> El primero de muchos codigos </h1> 
 <h2> Bienvenidos </h2>
 <p>Voy a añadir una imagen </p>
 <a href="https://oneshot.fandom.com/wiki/Niko">
- <img src="Niko.webp" alt="Saluden a nikó"><a/>
-<h3> Quieren saber mas de niko? </h3>
+ <img src="Niko.webp" alt="Saluden a Nikó"><a/>
+<h3> Quieren saber mas de Niko? </h3>
 <p>Hablemos de Niko</p>
 <h3>A Niko le gustan:</h3>
 <ol> 
