--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
    <meta charset="utf-8">
    <title>Mi Amigo Niko</title>
   </head>
-<h1> El primero de muchos codigos </h1> 
-<h2> Bienvenidos </h2>
-<p>Voy a añadir una imagen </p>
+<h1> Bienvenidos </h1> 
+<h2> Mi amigo Niko los saluda </h2>
+<p>Saluden a Niko</p>
 <a href="https://oneshot.fandom.com/wiki/Niko">
  <img src="Niko.webp" alt="Saluden a Nikó"><a/>
 <h3> Quieren saber mas de Niko? </h3>
@@ -19,7 +19,7 @@
 <h3>Niko <strong>Odia</strong>:</h3>
   <ol>
    <li>El agua</li>
-   <li>Que lastimen a sus amigos</li>
+   <li>Que <strong>lastimen</strong> a sus amigos</li>
    <li>Que lo confundan con un gato</li>
    <li>Que estes triste</li>  
   </ol>
