--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
  <html lang="esp">
   <head>
    <meta charset="utf-8">
+   <meta name="Hola"/>
    <title>Mi Amigo Niko</title>
   </head>
 <h1> Bienvenidos </h1> 
@@ -23,8 +24,9 @@
    <li>Que lo confundan con un gato</li>
    <li>Que estes triste</li>  
   </ol>
-<section>
+  <section>
   <h2>Quieres saber la historia de <em>Niko</em>?</h2>
   <a href="https://www.youtube.com/watch?v=r9KCo3pBE3I">
    <img src="wp5314453.jpg" alt="Niko apreciando el paisaje"><a/> Toca la imagen para ver su historia 
 </section>
+   </html> 
