--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <h2> Mi amigo Niko los saluda </h2>
 <p>Saluden a Niko</p>
 <a href="https://oneshot.fandom.com/wiki/Niko">
- <img src="Niko.webp" alt="Saluden a Nikó"><a/>
+ <img src="Imagenes/Niko.webp" alt="Saluden a Nikó"><a/>
 <h3> Quieren saber mas de Niko? </h3>
 <p>Hablemos de Niko</p>
 <h3>A Niko le gustan:</h3>
+  <img src="Imagenes/Illustration164b.webp" alt="Niko disfrutando de sus panqueques"
 <ol> 
  <li>Panqueques</li>
  <li>Estar con su mama</li>
@@ -27,6 +28,6 @@
   <section>
   <h2>Quieres saber la historia de <em>Niko</em>?</h2>
   <a href="https://www.youtube.com/watch?v=r9KCo3pBE3I">
-   <img src="wp5314453.jpg" alt="Niko apreciando el paisaje"><a/> Toca la imagen para ver su historia 
+   <img src="Imagenes/wp5314453.jpg" alt="Niko apreciando el paisaje"><a/> Toca la imagen para ver su historia 
 </section>
    </html> 
